--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,171 +1,134 @@
-<!-- App Header -->
+
+<!-- Appheader ------------------ -->
 
 <div class="e-appheader">
   <div class="e-appheader-content">
-    <!-- First inner div has Menu Icon, Logo and App Title -->
     <div class="e-appheader-content-inner">
-      <span class="material-icons">menu</span>
-      <mat-icon
-        aria-hidden="false"
-        aria-label="Example home icon"
-        fontIcon="home"
-      ></mat-icon>
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <img src="../assets/eModal-Logo.svg" alt="eModal Community Portal Logo">
+      <span class="e-apptitle">Manage Drivers</span>
     </div>
-    <!-- Second Inner has all the icons that are on the header -->
-    <div class="e-appheader-content-inner"></div>
+    <div class="e-appheader-content-inner">
+      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+        <mat-icon>favorite</mat-icon>
+      </button>
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+        <mat-icon>share</mat-icon>
+      </button>
+    </div>
   </div>
 </div>
 
-<!-- ------------------------------------------------------------------------------- -->
-
-<div class="e-actions-bar">
-  <button mat-raised-button class="e-btn e-btn-primary">Add Driver</button>
-</div>
+<!-- Main Content ----------------------- -->
 
 <div class="e-main-content-wrapper">
+
+  <!-- List Panel -------- -->
+
   <div class="e-list-panel">
-    <ul class="e-list-group e-w-100 e-column-gap-12">
-      <!-- Each List Item -->
-      <li class="e-list-item e-justify-between">
-        <div class="e-d-flex e-column-gap-12">
-          <!-- Image   -->
-          <img src="assets/dp-01.png" alt="" class="img-thumbnail" />
-          <!-- Name & Other Details -->
-          <div class="e-list-content">
-            <h2 class="e-title">Freddie Osborne</h2>
-            <p class="e-sub-title">fosborne@outlook.com</p>
-            <p class="e-sub-title">+1-650-513-0514</p>
+    <div class="e-list-group">
+
+      <!-- Each List Item -------- -->
+      <div class="e-list-item">
+          <div class="e-list-item-inner">
+              <img class="img-thumbnail" src="../assets/dp-01.png" alt="Image Thumbnail of Driver">
+              <div class="e-list-item-text">
+                <h2 class="e-list-item-title">Freddie Osborne</h2>
+                <p>fosborne@outlook.com</p>
+                <p>+1-650-513-0514</p>
+              </div>
           </div>
+          <div class="e-list-item-inner">
+            <mat-chip class="e-chip-active"> Active </mat-chip>
         </div>
-        <!-- Status Badge  -->
-        <div class="badge">
-          <mat-chip class="e-chip-active"> Active </mat-chip>
-        </div>
-      </li>
-      <!-- End of List Item----- -->
-    </ul>
+      </div>
+      <!-- End of List Item --------  -->
+
+    </div>    
   </div>
-  <div class="e-details-panel"></div>
+
+  <!-- Details Panel -------- -->
+
+  <div class="e-details-panel">
+    <div class="e-details-content">
+
+      <div class="e-details-content-header">
+        <div class="e-details-content-inner">
+
+          <!-- Each List Item -------- -->
+            <div class="e-list-item">
+                <div class="e-list-item-inner">
+                  <img class="img-thumbnail" src="../assets/dp-01.png" alt="Image Thumbnail of Driver">
+                  <div class="e-list-item-text">
+                    <h2 class="e-list-item-title">Freddie Osborne</h2>
+                    <p>fosborne@outlook.com</p>
+                    <p>+1-650-513-0514</p>
+                  </div>
+                </div>
+              <div class="e-list-item-inner">
+                <mat-chip class="e-chip-active"> Active </mat-chip>
+              </div>
+            </div>
+          <!-- End of List Item --------  -->
+        </div>
+  
+        <!-- Edit Driver Button ------- -->
+        <div class="e-details-content-inner">
+          <button mat-raised-button class="e-btn-secondary"> <mat-icon>edit</mat-icon>Edit Driver</button>
+        </div>
+      </div>
+      <!-- ------------------------------- -->
+      <!-- Details Tabs ------------------ -->
+
+      <div class="e-details-tabs">
+        <mat-tab-group [@.disabled]="true">
+          <mat-tab label="Contract Info">
+            <div class="e-details-tab-content e-d-flex e-flex-column e-row-gap-12 m-12">
+              <div class="e-d-flex e-column-gap-12 e-align-items-center">
+                <mat-icon class="fs-24 tertiary-color">today</mat-icon>
+                <span class="e-section-heading fs-20 tertiary-color">
+                  Contract Dates
+                </span>
+              </div>
+              <div class="m-x-36">
+                <img src="../assets/contract-arrow.png" alt="Arrow Image">
+              </div>
+              
+              <div class="e-d-flex e-column-gap-60 m-x-36">
+                <div class="e-d-flex e-flex-column e-row-gap-6">
+                  <span class="fs-12 secondary-color">Begin Date</span>
+                  <span class="fs-16 primary-color">03/24/2023</span>
+                </div>
+                <div class="e-d-flex e-flex-column e-row-gap-6">
+                  <span class="fs-12 secondary-color">End Date</span>
+                  <span class="fs-16 primary-color">03/25/2024</span>
+                </div>
+              </div>
+              
+              
+            </div>
+          </mat-tab>
+          <mat-tab label="License Info">
+            <div class="e-details-tab-content">
+              Content 2
+            </div>
+          </mat-tab>
+          <mat-tab label="Company Info">
+            <div class="e-details-tab-content">
+              Content 3
+            </div>
+          </mat-tab>
+        </mat-tab-group>
+      </div>
+
+      
+      
+
+    </div>
+  </div>
 </div>
 
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <span>Custom Toolbar</span>
-  </mat-toolbar-row>
-
-  <mat-toolbar-row>
-    <span>Second Line</span>
-    <span class="example-spacer"></span>
-    <mat-icon
-      class="example-icon"
-      aria-hidden="false"
-      aria-label="Example user verified icon"
-      >verified_user</mat-icon
-    >
-  </mat-toolbar-row>
-
-  <mat-toolbar-row>
-    <span>Third Line</span>
-    <span class="example-spacer"></span>
-    <mat-icon
-      class="example-icon"
-      aria-hidden="false"
-      aria-label="Example heart icon"
-      >favorite</mat-icon
-    >
-    <mat-icon
-      class="example-icon"
-      aria-hidden="false"
-      aria-label="Example delete icon"
-      >delete</mat-icon
-    >
-  </mat-toolbar-row>
-</mat-toolbar>
-
-<mat-toolbar color="accent">
-  <mat-toolbar-row>
-    <span>Custom Toolbar</span>
-  </mat-toolbar-row>
-
-  <mat-toolbar-row>
-    <span>Second Line</span>
-    <span class="example-spacer"></span>
-    <mat-icon
-      class="example-icon"
-      aria-hidden="false"
-      aria-label="Example user verified icon"
-      >verified_user</mat-icon
-    >
-  </mat-toolbar-row>
-
-  <mat-toolbar-row>
-    <span>Third Line</span>
-    <span class="example-spacer"></span>
-    <mat-icon
-      class="example-icon"
-      aria-hidden="false"
-      aria-label="Example heart icon"
-      >favorite</mat-icon
-    >
-    <mat-icon
-      class="example-icon"
-      aria-hidden="false"
-      aria-label="Example delete icon"
-      >delete</mat-icon
-    >
-  </mat-toolbar-row>
-</mat-toolbar>
-
-<div class="alternative">
-  <mat-toolbar>
-    <mat-toolbar-row>
-      <span>Custom Toolbar</span>
-    </mat-toolbar-row>
-
-    <mat-toolbar-row>
-      <span>Second Line</span>
-      <span class="example-spacer"></span>
-      <mat-icon
-        class="example-icon"
-        aria-hidden="false"
-        aria-label="Example user verified icon"
-        >verified_user</mat-icon
-      >
-    </mat-toolbar-row>
-
-    <mat-toolbar-row>
-      <span>Third Line</span>
-      <span class="example-spacer"></span>
-      <mat-icon
-        class="example-icon"
-        aria-hidden="false"
-        aria-label="Example heart icon"
-        >favorite</mat-icon
-      >
-      <mat-icon
-        class="example-icon"
-        aria-hidden="false"
-        aria-label="Example delete icon"
-        >delete</mat-icon
-      >
-    </mat-toolbar-row>
-  </mat-toolbar>
-</div>
-
-<mat-divider></mat-divider>
-
-<i class="material-icons-outlined">notifications</i>
-<i class="material-icons">notifications</i>
-<section>
-  <div class="example-label">Raised</div>
-  <div class="example-button-row">
-    <button mat-raised-button>Basic</button>
-    <button mat-raised-button color="primary">Primary</button>
-    <button mat-raised-button color="accent">Accent</button>
-    <button mat-raised-button color="warn">Warn</button>
-    <button mat-raised-button disabled>Disabled</button>
-  </div>
-</section>
-<mat-divider></mat-divider>
 
 <router-outlet></router-outlet>
