--- a/src/e-styles.css
+++ b/src/e-styles.css
@@ -463,8 +463,8 @@ a{
 .e-details-panel {
   align-items: start;
   /* background: #fff1e9; */
-  height: 100%;
-  min-height: 260px;
+  /* height: 100%; */
+  /* min-height: 260px; */
   border:0.5px solid var(--border-color);
   border-radius:4px;
 }
